--- a/src/pages/data/project/post.astro
+++ b/src/pages/data/project/post.astro
@@ -19,7 +19,7 @@ const createdIssueId =
 <V2Layout hideLinks={[ItemName.ProjectName]}>
         <NotificationBanner
                 slot="center"
-                icon={getIcon("project")}
+                icon="project"
                 type="info"
                 title="Your first project"
         >
@@ -33,6 +33,7 @@ const createdIssueId =
                         <NotificationBanner
                                 type={"warning"}
                                 title={"Issue why you fork"}
+                                icon="warning"
                         >
                                 Select or create a new issue. In CascadeFund, we
                                 link the projects between each other via issues
