--- a/src/pages/influencer/welcome.astro
+++ b/src/pages/influencer/welcome.astro
@@ -10,6 +10,7 @@ import NotificationBanner from "@/components/NotificationBanner";
     slot="center"
     type="success"
     title="Welcome to 'Project' community"
+    icon="success"
   >
     You got 100 Voting Power! This voting power is to raise your word as an
     issue, and to take the scarce maintainer's resource. You also help to raise
@@ -20,6 +21,7 @@ import NotificationBanner from "@/components/NotificationBanner";
     slot="center"
     type="success"
     title="You initiated a quest for the maintainer"
+    icon="success"
   >
     The maintainer has a quest, and will have to reply to you. Otherwise, his
     rating will reduce
