--- a/src/pages/maintainer/cwork.astro
+++ b/src/pages/maintainer/cwork.astro
@@ -15,6 +15,7 @@ import CworkPanel from "@/components/maintainer/CworkPanel";
     slot="center"
     type="warning"
     title="Cascading Work page is a quest based interaction with the library maintainers."
+    icon="warning"
   >
     Got a bug, need a feature, have a question? Then, help to make the library
     better for you and for the world
