Use accordion for expanding and collapsing

--- a/src/layouts/LandingLayout.astro
+++ b/src/layouts/LandingLayout.astro
@@ -1,6 +1,7 @@
 ---
 import { ClientRouter } from "astro:transitions";
 import "@/styles/global.css";
+import "@/styles/motion.css";
 import Header from "@/components/utilitified_decorations/LandingHeader.astro";
 import Footer from "@/components/utilitified_decorations/Footer.astro";
 import type { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
