--- a/src/styles/motion.css
+++ b/src/styles/motion.css
@@ -57,3 +57,186 @@
 		height: 0;
 	}
 }
+
+/* Expandable Anchor Animations */
+.AccordionContent[data-anchor="top"][data-state="open"] {
+	animation: slideDownFromTop 300ms ease-out;
+}
+.AccordionContent[data-anchor="top"][data-state="closed"] {
+	animation: slideUpFromTop 300ms ease-out;
+}
+
+.AccordionContent[data-anchor="bottom"][data-state="open"] {
+	animation: slideUpFromBottom 300ms ease-out;
+}
+.AccordionContent[data-anchor="bottom"][data-state="closed"] {
+	animation: slideDownFromBottom 300ms ease-out;
+}
+
+.AccordionContent[data-anchor="center"][data-state="open"] {
+	animation: slideDown 300ms ease-out;
+}
+.AccordionContent[data-anchor="center"][data-state="closed"] {
+	animation: slideUp 300ms ease-out;
+}
+
+.AccordionContent[data-anchor="top-left"][data-state="open"] {
+	animation: slideFromTopLeft 300ms ease-out;
+}
+.AccordionContent[data-anchor="top-left"][data-state="closed"] {
+	animation: slideToTopLeft 300ms ease-out;
+}
+
+.AccordionContent[data-anchor="top-right"][data-state="open"] {
+	animation: slideFromTopRight 300ms ease-out;
+}
+.AccordionContent[data-anchor="top-right"][data-state="closed"] {
+	animation: slideToTopRight 300ms ease-out;
+}
+
+.AccordionContent[data-anchor="bottom-left"][data-state="open"] {
+	animation: slideFromBottomLeft 300ms ease-out;
+}
+.AccordionContent[data-anchor="bottom-left"][data-state="closed"] {
+	animation: slideToBottomLeft 300ms ease-out;
+}
+
+.AccordionContent[data-anchor="bottom-right"][data-state="open"] {
+	animation: slideFromBottomRight 300ms ease-out;
+}
+.AccordionContent[data-anchor="bottom-right"][data-state="closed"] {
+	animation: slideToBottomRight 300ms ease-out;
+}
+
+/* Keyframe animations for different anchor points */
+@keyframes slideDownFromTop {
+	from {
+		height: 0;
+		transform-origin: top;
+	}
+	to {
+		height: var(--radix-accordion-content-height);
+		transform-origin: top;
+	}
+}
+
+@keyframes slideUpFromTop {
+	from {
+		height: var(--radix-accordion-content-height);
+		transform-origin: top;
+	}
+	to {
+		height: 0;
+		transform-origin: top;
+	}
+}
+
+@keyframes slideUpFromBottom {
+	from {
+		height: 0;
+		transform-origin: bottom;
+	}
+	to {
+		height: var(--radix-accordion-content-height);
+		transform-origin: bottom;
+	}
+}
+
+@keyframes slideDownFromBottom {
+	from {
+		height: var(--radix-accordion-content-height);
+		transform-origin: bottom;
+	}
+	to {
+		height: 0;
+		transform-origin: bottom;
+	}
+}
+
+@keyframes slideFromTopLeft {
+	from {
+		height: 0;
+		transform-origin: top left;
+	}
+	to {
+		height: var(--radix-accordion-content-height);
+		transform-origin: top left;
+	}
+}
+
+@keyframes slideToTopLeft {
+	from {
+		height: var(--radix-accordion-content-height);
+		transform-origin: top left;
+	}
+	to {
+		height: 0;
+		transform-origin: top left;
+	}
+}
+
+@keyframes slideFromTopRight {
+	from {
+		height: 0;
+		transform-origin: top right;
+	}
+	to {
+		height: var(--radix-accordion-content-height);
+		transform-origin: top right;
+	}
+}
+
+@keyframes slideToTopRight {
+	from {
+		height: var(--radix-accordion-content-height);
+		transform-origin: top right;
+	}
+	to {
+		height: 0;
+		transform-origin: top right;
+	}
+}
+
+@keyframes slideFromBottomLeft {
+	from {
+		height: 0;
+		transform-origin: bottom left;
+	}
+	to {
+		height: var(--radix-accordion-content-height);
+		transform-origin: bottom left;
+	}
+}
+
+@keyframes slideToBottomLeft {
+	from {
+		height: var(--radix-accordion-content-height);
+		transform-origin: bottom left;
+	}
+	to {
+		height: 0;
+		transform-origin: bottom left;
+	}
+}
+
+@keyframes slideFromBottomRight {
+	from {
+		height: 0;
+		transform-origin: bottom right;
+	}
+	to {
+		height: var(--radix-accordion-content-height);
+		transform-origin: bottom right;
+	}
+}
+
+@keyframes slideToBottomRight {
+	from {
+		height: var(--radix-accordion-content-height);
+		transform-origin: bottom right;
+	}
+	to {
+		height: 0;
+		transform-origin: bottom right;
+	}
+}
