--- a/src/pages/maintainer/cwork.astro
+++ b/src/pages/maintainer/cwork.astro
@@ -5,7 +5,7 @@ import Menu from "@/components/utilitified_decorations/MenuPanel";
 
 import TaskSection from "@/components/quest/QuestPanel";
 import NotificationBanner from "@/components/NotificationBanner";
-import Card from "@/components/utilitified_decorations/PagePanel";
+import PageLikePanel from "@/components/panel/PageLikePanel";
 import CworkPanel from "@/components/maintainer/CworkPanel";
 ---
 
@@ -23,7 +23,7 @@ import CworkPanel from "@/components/maintainer/CworkPanel";
   <TaskSection slot="center" title="My Cascading Tasks" client:load />
 
   <CworkPanel slot="center" client:load />
-  <Card slot="right" title="Dependencies Info">
+  <PageLikePanel slot="right" title="Dependencies Info">
     <div class="space-y-3">
       <div>
         <div class="flex justify-between items-center">
@@ -56,5 +56,5 @@ import CworkPanel from "@/components/maintainer/CworkPanel";
         button above.
       </p>
     </div>
-  </Card>
+  </PageLikePanel>
 </V2Layout>
