--- a/src/pages/maintainer/marketing.astro
+++ b/src/pages/maintainer/marketing.astro
@@ -2,7 +2,7 @@
 import V2Layout from "@/layouts/PanelViewLayout.astro";
 import Menu from "@/components/utilitified_decorations/MenuPanel";
 import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
-import Card from "@/components/utilitified_decorations/PagePanel";
+import PageLikePanel from "@/components/panel/PageLikePanel";
 
 import ShareTools from "@/components/maintainer/ShareToolsPanel";
 
@@ -15,7 +15,7 @@ import InsightPanel from "@/components/maintainer/InsightPanel";
 
 <V2Layout activeLink={ItemName.ProjectName}>
   <Menu slot="left" activeMenuItem="marketing" />
-  <Card
+  <PageLikePanel
     slot="center"
     title="CascadeFund Marketing Tools"
     actions={[
@@ -27,7 +27,7 @@ import InsightPanel from "@/components/maintainer/InsightPanel";
       users, donations, or contributors, CascadeFund gives you simple share
       tools to spread the word and onboard people.
     </p>
-  </Card>
+  </PageLikePanel>
   <MarketingAnalyticsPanel slot="center" client:load />
   <RowGrid slot="center" cols={2}>
     <CommentFeedback />
