--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -4,7 +4,7 @@ import V2Layout from "@/layouts/LandingLayout.astro";
 
 import HeroSection from "@/layouts/sections/HeroSection.astro";
 import LeftImageRightPanels from "@/layouts/sections/LeftImageRightPanelsSection.astro";
-import PagelikePanel from "@/components/utilitified_decorations/PagePanel";
+import PageLikePanel from "@/components/panel/PageLikePanel";
 import { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
 import Button from "@/components/Button";
 import SectionScrollButton from "@/components/ScrollingToSectionButton";
