--- a/src/components/project/ProjectInfoPanel.astro
+++ b/src/components/project/ProjectInfoPanel.astro
@@ -1,14 +1,14 @@
 ---
 import Button from "@/components/Button";
 import Badge from "@/components/Badge";
-import Component from "@/components/utilitified_decorations/Panel";
+import BasePanel from "@/components/panel/BasePanel";
 import NotificationBanner from "@/components/NotificationBanner";
 import Horizontally from "@/components/grid/RowGrid";
 import { getIcon } from "../icon";
 import ReactComponentImporter from "../ReactComponentImporter";
 ---
 
-<Component
+<BasePanel
   className="bg-white rounded-lg shadow-sm border border-gray-200 p-4 md:p-6 mb-6"
 >
   <Horizontally>
@@ -71,4 +71,4 @@ import ReactComponentImporter from "../ReactComponentImporter";
       </div>
     </div>
   </div>
-</Component>
+</BasePanel>
