--- a/src/pages/influencer/confirmed.astro
+++ b/src/pages/influencer/confirmed.astro
@@ -1,7 +1,7 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
 
-import InfoPanel from "@/components/InfoPanel2.astro";
+import InfoPanel from "@/components/panel/InfoPanel";
 import Votes from "@/components/project/VotedIssueListPanel";
 import BackButton from "@/components/utilitified_decorations/BackButton";
 import NotificationBanner from "@/components/NotificationBanner";
