--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -5,7 +5,7 @@ import Link from "@/components/Link";
 
 import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
-import InfoPanel from "@/components/InfoPanel2.astro";
+import InfoPanel from "@/components/panel/InfoPanel";
 import TasksSection from "@/components/quest/QuestPanel";
 import RoadmapPanel from "@/components/maintainer/RoadmapPanel";
 import WorkPanel from "@/components/maintainer/WorkPanel";
