--- a/src/layouts/sections/LeftImageRightPanelsSection.astro
+++ b/src/layouts/sections/LeftImageRightPanelsSection.astro
@@ -1,5 +1,7 @@
 ---
-import StruggleCard, { type InfoPanelProps } from "@/components/InfoPanel";
+import StruggleCard, {
+  type InfoPanelProps,
+} from "@/components/panel/InfoPanel";
 import HorizontalRow from "@/components/grid/RowGrid";
 import Section from "./BaseSection.astro";
 import type { SectionBgProps } from "@/types/eventTypes";
