Improve the button

--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -11,7 +11,7 @@ import SectionScrollButton from "@/components/ScrollingToSectionButton";
 import HorizontalPanels from "@/layouts/sections/HorizontalPanelsSection.astro";
 import { BgType } from "@/types/eventTypes";
 import Section from "@/layouts/sections/BaseSection.astro";
-import Badge from "@/components/Badge";
+import Badge from "@/components/custom-ui/Badge";
 import HorizontalSection from "@/layouts/sections/HorizontalPanelsSection.astro";
 import BasePanel from "@/components/panel/BasePanel";
 import { getIcon } from "@/components/icon";
