--- a/src/components/project/ProjectInfoPanel.astro
+++ b/src/components/project/ProjectInfoPanel.astro
@@ -1,6 +1,6 @@
 ---
 import Button from "@/components/Button";
-import Badge from "@/components/Badge";
+import Badge from "@/components/custom-ui/Badge";
 import BasePanel from "@/components/panel/BasePanel";
 import NotificationBanner from "@/components/NotificationBanner";
 import Horizontally from "@/components/grid/RowGrid";
