--- a/src/components/utilitified_decorations/WorkNavbar.astro
+++ b/src/components/utilitified_decorations/WorkNavbar.astro
@@ -1,5 +1,5 @@
 ---
-import Badge from "@/components/Badge";
+import Badge from "@/components/custom-ui/Badge";
 import C from "./NavigatingItem";
 
 export enum ItemName {
