--- a/src/components/project/ProjectInfoPanel.astro
+++ b/src/components/project/ProjectInfoPanel.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "@/components/Button";
+import Button from "@/components/custom-ui/Button";
 import Badge from "@/components/custom-ui/Badge";
 import BasePanel from "@/components/panel/BasePanel";
 import NotificationBanner from "@/components/NotificationBanner";
