--- a/src/layouts/sections/BaseSection.astro
+++ b/src/layouts/sections/BaseSection.astro
@@ -1,5 +1,5 @@
 ---
-import Button from "@/components/Button";
+import Button from "@/components/custom-ui/Button";
 import { type SectionProps, bgClassNames, BgType } from "@/types/eventTypes";
 import DynamicReactImporter from "@/components/ReactComponentImporter";
 
