--- a/src/pages/meta/contributor.astro
+++ b/src/pages/meta/contributor.astro
@@ -6,7 +6,7 @@ import HeroSection from "@/layouts/sections/HeroSection.astro";
 import LeftImageRightPanels from "@/layouts/sections/LeftImageRightPanelsSection.astro";
 import PageLikePanel from "@/components/panel/PageLikePanel";
 import { ItemName } from "@/components/utilitified_decorations/LandingNavbar.astro";
-import Button from "@/components/Button";
+import Button from "@/components/custom-ui/Button";
 import SectionScrollButton from "@/components/ScrollingToSectionButton";
 import HorizontalPanels from "@/layouts/sections/HorizontalPanelsSection.astro";
 import { BgType } from "@/types/eventTypes";
