Link is focusable and in the Custom UI

--- a/src/components/utilitified_decorations/Footer.astro
+++ b/src/components/utilitified_decorations/Footer.astro
@@ -1,6 +1,6 @@
 ---
 import CascadeFundLogo from "./Logo.astro";
-import Link from "@/components/Link";
+import Link from "@/components/custom-ui/Link";
 
 const footerContentClass =
   ` peer-checked:backdrop-blur-sm` +
