--- a/src/components/utilitified_decorations/LandingNavbar.astro
+++ b/src/components/utilitified_decorations/LandingNavbar.astro
@@ -1,5 +1,5 @@
 ---
-import Link from "@/components/Link";
+import Link from "@/components/custom-ui/Link";
 import { GridStyle } from "@/types/eventTypes";
 import Tooltip from "@/components/utilitified_decorations/Tooltip";
 
