--- a/src/pages/data/project/post.astro
+++ b/src/pages/data/project/post.astro
@@ -5,7 +5,7 @@ import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro"
 import ProjectPostFlow from "@/components/project/ProjectPostFlow";
 import NotificationBanner from "@/components/NotificationBanner";
 import InfoPanel from "@/components/panel/InfoPanel";
-import Link from "@/components/Link";
+import Link from "@/components/custom-ui/Link";
 import { getIcon } from "@/components/icon";
 
 // Project ID + Not Yet Created + Fork Project means issue is created for the
