--- a/src/pages/login/getting-started.astro
+++ b/src/pages/login/getting-started.astro
@@ -8,7 +8,7 @@ import { BgType } from "@/types/eventTypes";
 import RowGrid from "@/components/grid/RowGrid";
 import RolePanel from "@/components/profile/RolePanel";
 import InfoPanel from "@/components/panel/InfoPanel";
-import Link from "@/components/Link";
+import Link from "@/components/custom-ui/Link";
 import ReactComponentImporter from "@/components/ReactComponentImporter";
 
 const bg = {
