--- a/src/pages/login/index.astro
+++ b/src/pages/login/index.astro
@@ -4,7 +4,7 @@ import { ItemName } from "@/components/utilitified_decorations/LandingNavbar.ast
 
 import PageLikePanel from "@/components/panel/PageLikePanel";
 import LinkBtn from "@/components/LinkBtn";
-import Link from "@/components/Link";
+import Link from "@/components/custom-ui/Link";
 import InfoPanel from "@/components/panel/InfoPanel";
 ---
 
