--- a/src/pages/maintainer/work.astro
+++ b/src/pages/maintainer/work.astro
@@ -1,7 +1,7 @@
 ---
 import V2Layout from "@/layouts/PanelViewLayout.astro";
 import Menu from "@/components/panel/MenuPanel";
-import Link from "@/components/Link";
+import Link from "@/components/custom-ui/Link";
 
 import { ItemName } from "@/components/utilitified_decorations/WorkNavbar.astro";
 
